<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inicio_segunda"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="barbara.srta_athenea_tablas.Ajustes">

    <Button
        android:id="@+id/modificaContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:background="@color/transparente"
        android:text="@string/modificarContra"
        android:textColor="@color/blanco"
        android:textSize="@dimen/mediana2"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/modificaNombre"
        android:layout_alignStart="@+id/modificaNombre"
        android:layout_alignRight="@+id/modificaNombre"
        android:layout_alignEnd="@+id/modificaNombre" />

    <Button
        android:id="@+id/modificaNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modificaContra"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/transparente"
        android:text="@string/cambiarNombre"
        android:textColor="@color/blanco"
        android:textSize="@dimen/mediana2" />
    <Button
        android:id="@+id/quitar_anun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparente"
        android:text="@string/anun"
        android:textColor="@color/blanco"
        android:textSize="@dimen/mediana2"
        android:layout_below="@+id/modificaNombre"
        android:layout_alignLeft="@+id/modificaNombre"
        android:layout_alignStart="@+id/modificaNombre"
        android:layout_alignRight="@+id/modificaNombre"
        android:layout_alignEnd="@+id/modificaNombre" />

    <TextView
        android:id="@+id/txtInstrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="57dp"
        android:background="@drawable/edit_redondeado_naranja"
        android:padding="12dp"
        android:text="@string/instrucciones_ajustes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/pequeno" />
</RelativeLayout>
