<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizarra_sola"
    android:foregroundGravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="55dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="38dp"
    android:weightSum="1"
    tools:context="barbara.srta_athenea_tablas.Pregunta">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/primero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"

                android:layout_marginLeft="10dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="4 X 10 ="
                android:textColor="#ffffff"
                android:textSize="@dimen/grande" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/resultado"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/grande" />


            </RelativeLayout>

        </LinearLayout>


        <ImageButton
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="12dp"
            android:background="@color/transparente"
            android:onClick="onClick"
            android:padding="5dp"
            android:src="@drawable/flecha"

            android:textColor="@color/tizaVerde"
            android:textSize="@dimen/mediana" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/tec0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:onClick="onClick"
                    android:padding="3dp"
                    android:text="@string/t0"
                    android:textColor="@color/tizaVerde"
                    android:textSize="@dimen/mediana" />

                <Button
                    android:id="@+id/tec1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:onClick="onClick"
                    android:padding="3dp"
                    android:text="@string/t1"
                    android:textColor="@color/tizaVerde"
                    android:textSize="@dimen/mediana" />


                <Button
                    android:id="@+id/tec2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:onClick="onClick"
                    android:padding="3dp"
                    android:text="@string/t2"
                    android:textColor="@color/tizaVerde"
                    android:textSize="@dimen/mediana" />

                <Button
                    android:id="@+id/tec3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_column="3"

                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:onClick="onClick"
                    android:padding="3dp"
                    android:text="@string/t3"
                    android:textColor="@color/tizaVerde"
                    android:textSize="@dimen/mediana" />

                <Button
                    android:id="@+id/tec4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_column="4"
                    android:layout_weight="1"

                    android:background="@color/transparente"
                    android:onClick="onClick"
                    android:padding="3dp"
                    android:text="@string/t4"
                    android:textColor="@color/tizaVerde"
                    android:textSize="@dimen/mediana" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"

                android:orientation="vertical">

                <Button
                    android:id="@+id/tec5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:onClick="onClick"
                    android:padding="3dp"
                    android:text="@string/t5"
                    android:textColor="@color/tizaVerde"
                    android:textSize="@dimen/mediana" />

                <Button
                    android:id="@+id/tec6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_column="1"
                    android:layout_weight="1"

                    android:background="@color/transparente"
                    android:onClick="onClick"
                    android:padding="3dp"
                    android:text="@string/t6"
                    android:textColor="@color/tizaVerde"
                    android:textSize="@dimen/mediana" />

                <Button
                    android:id="@+id/tec7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:onClick="onClick"
                    android:padding="3dp"
                    android:text="@string/t7"
                    android:textColor="@color/tizaVerde"
                    android:textSize="@dimen/mediana" />

                <Button
                    android:id="@+id/tec8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_column="3"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:onClick="onClick"
                    android:padding="3dp"
                    android:text="@string/t8"
                    android:textColor="@color/tizaVerde"
                    android:textSize="@dimen/mediana" />

                <Button
                    android:id="@+id/tec9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_column="4"
                    android:layout_weight="1"
                    android:background="@color/transparente"
                    android:onClick="onClick"
                    android:padding="3dp"
                    android:text="@string/t9"
                    android:textColor="@color/tizaVerde"
                    android:textSize="@dimen/mediana" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/cronome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/borrador"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="12dp"
        android:textColor="@color/blanco"
        android:textSize="@dimen/mediana" />

    <ImageView
        android:id="@+id/imageCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_marginRight="50dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/check"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/borrador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/borrador" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="100dp"
        android:layout_weight="0.5"
        android:background="@drawable/edit_redondeado"
        android:padding="20dp" />


</RelativeLayout>
